[package]
name = "clang-rv-cc"
description = "A temporary clang wrapper for RISC-V targets till correct config is used in cc.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.0"
regex = "1.8.4"
which = "4.4.0"
